# ogr2gui

./: .gitignore  BUILDING  CMakeLists.txt  README  README.md  khXWJF.json  ogr2gui.pro  ogr2gui_zh.qm  ogr2gui_zh.ts
inc/: App.h  Inf.h  Ogr.h
src/: App.cpp  Inf.cpp  Ogr.cpp  ogr2gui_zh.qm
